[package]
name = "bifrost-liquidity-mining-rpc-runtime-api"
version = "0.8.0"
authors.workspace = true
edition.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
bifrost-primitives = { path = "../../../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-api/std",
    "bifrost-primitives/std",
]
